updated personal info

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am Hospitality Industry professional converting to Software Development!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Medellin Colombia, raised in CT, and lived in Florida and NYC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy cooking, cycling, coaching, carpentry, public speaking, and people watching.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would like to work remotely via my computer and also do Public Speaking - Motivation!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in New York City</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The potential for growth, the creativity, and endless possibilities it brings.</p>
     </section>
 
     <footer id="footer">
